# tokscale-3d

./: .gitignore  README.ko-KR.md  README.ko.md  README.md  index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
Casks/: tokscale.rb
scripts/: regenerate_cat_frames.py  regenerate_wireframe_notched.py  release.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: animation.rs  lib.rs  main.rs  state.rs  tokscale.rs  tray.rs
src/components/: ContributionGraph2D.tsx  ContributionGraph3D.tsx  FilterChips.tsx  HeaderBar.tsx  InnerCard.tsx  Panel.tsx  SettingsPanel.tsx  StreaksCard.tsx  TokenUsageCard.tsx  TokscaleSetup.tsx
src/hooks/: useGraphStream.ts
src/lib/: clients.ts  format.ts  grid.ts  runtime.ts  settings.ts  stats.ts  streaks.ts  types.ts  updater.ts
