[package]
name = "tokcat"
version = "0.1.7"
edition = "2021"
description = "Native macOS menubar dashboard for tokscale token usage"
authors = ["handlecusion"]

[lib]
name = "tokcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
